--- a/ChronosClient/Views/Login.xaml
+++ b/ChronosClient/Views/Login.xaml
@@ -9,9 +9,9 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <TextBox x:Name="userID_Box" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="250" PlaceholderText="User ID" Margin="515,340,515,0"/>
-        <TextBox x:Name="password_Box" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="250" PlaceholderText="Password" Margin="515,378,515,0" InputScope="Password"/>
-        <Button x:Name="login" Content="Login" HorizontalAlignment="Center" Margin="515,415,641,0" VerticalAlignment="Top" Width="124" Click="login_Click"/>
-        <Button x:Name="register" Content="Register" HorizontalAlignment="Center" Margin="641,415,515,0" VerticalAlignment="Top" Width="124" Click="register_Click"/>
+        <TextBox x:Name="password_Box" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="250" PlaceholderText="Password" Margin="515,378,515,0" InputScope="Password" TextChanged="password_Box_TextChanged"/>
+        <Button x:Name="login_Button" Content="Login" HorizontalAlignment="Center" Margin="515,415,641,0" VerticalAlignment="Top" Width="124" Click="login_Click"/>
+        <Button x:Name="register_Button" Content="Register" HorizontalAlignment="Center" Margin="641,415,515,0" VerticalAlignment="Top" Width="124" Click="register_Click"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="Chronos Chat" VerticalAlignment="Top" FontSize="40" Width="246" Margin="517,238,517,0"/>
         <Border x:Name="status_Bar" Background="#22B14C"
                Margin="0,500,0,120" Height="100" >
