Add messages view

--- a/ChronosClient/Views/Messages.xaml
+++ b/ChronosClient/Views/Messages.xaml
@@ -8,11 +8,7 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView x:Name="listView_Messages" Height="322" VerticalAlignment="Center" Width="569" HorizontalAlignment="Center" Margin="356,218,355,180" SelectionChanged="listView_Users_SelectionChanged">
-            <TextBlock x:Name="textBlock" TextWrapping="Wrap" Text="TextBlock"/>
-
-        </ListView>
+        <ListView x:Name="listView_Messages" Height="322" VerticalAlignment="Center" Width="569" HorizontalAlignment="Center" Margin="356,168,355,230" SelectionChanged="listView_Users_SelectionChanged"/>
         <TextBlock x:Name="label" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="Chronos Chat" VerticalAlignment="Top" FontWeight="Light" FontSize="50" Width="295" Margin="493,94,492,0" />
-
     </Grid>
 </Page>
