--- a/ChronosClient/Views/AsymmetricKeys.xaml
+++ b/ChronosClient/Views/AsymmetricKeys.xaml
@@ -10,7 +10,7 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <TextBlock x:Name="label" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="Chronos Chat" VerticalAlignment="Top" FontWeight="Light" FontSize="50" Width="295" Margin="493,94,492,0" />
-        <TextBlock x:Name="keyGenMessage" HorizontalAlignment="Center"  TextWrapping="Wrap"  FontSize="20" Text="No asymmetric keys were found. Where would you like to store your public key copy?" VerticalAlignment="Top"  Width="761" Margin="260,256,259,0"/>
+        <TextBlock x:Name="keyGenMessage" HorizontalAlignment="Center"  TextWrapping="Wrap"  FontSize="20" Text="No asymmetric keys were found. Where would you like to export a copy of your public key for you to distribute?" VerticalAlignment="Top"  Width="761" Margin="260,256,259,0"/>
         <Button x:Name="dirSelectorButton" Content="Select Folder" HorizontalAlignment="Left" Margin="898,341,0,0" VerticalAlignment="Top" Click="dirSelector_Click"/>
         <TextBlock x:Name="directory" HorizontalAlignment="Center"  TextWrapping="Wrap"  FontSize="20" Text="" VerticalAlignment="Top" Margin="287,428,286,0"/>
         <Button x:Name="continueButton" Content="Continue" HorizontalAlignment="Left" Margin="921,341,0,0" VerticalAlignment="Top" Click="continue_Click"/>
