--- a/ChronosClient/Views/Login.xaml
+++ b/ChronosClient/Views/Login.xaml
@@ -9,7 +9,7 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <TextBox x:Name="userID_Box" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="250" PlaceholderText="User ID" Margin="515,340,515,0"/>
-        <TextBox x:Name="password_Box" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="250" PlaceholderText="Password" Margin="515,378,515,0" InputScope="Password" TextChanged="password_Box_TextChanged"/>
+        <PasswordBox x:Name="password_Box" HorizontalAlignment="Center" VerticalAlignment="Top" Width="250" PlaceholderText="Password" Margin="515,378,515,0"/>
         <Button x:Name="login_Button" Content="Login" HorizontalAlignment="Center" Margin="515,415,641,0" VerticalAlignment="Top" Width="124" Click="login_Click"/>
         <Button x:Name="register_Button" Content="Register" HorizontalAlignment="Center" Margin="641,415,515,0" VerticalAlignment="Top" Width="124" Click="register_Click"/>
         <Border x:Name="status_Bar" Margin="0,466,0,154" Height="100" >
