Async send messages

--- a/ChronosClient/Views/ListUsers.xaml
+++ b/ChronosClient/Views/ListUsers.xaml
@@ -11,6 +11,7 @@
         <ListView x:Name="listView_Users" Height="322" VerticalAlignment="Center" Width="569" HorizontalAlignment="Center" Margin="356,218,355,180" SelectionChanged="listView_Users_SelectionChanged"/>
         <TextBlock x:Name="label" HorizontalAlignment="Center"  TextWrapping="Wrap" Text="Chronos Chat" VerticalAlignment="Top" FontWeight="Light" FontSize="50" Width="295" Margin="493,94,492,0" />
         <TextBlock x:Name="startChatMessage" HorizontalAlignment="Left" Margin="380,218,0,0" TextWrapping="Wrap" FontStyle="Italic" FontSize="20" Text="Select a user to start chatting!" VerticalAlignment="Top"/>
-        <Button x:Name="next_Button" Content="Continue" HorizontalAlignment="Left" Margin="856,656,0,0" VerticalAlignment="Top" Click="next_Button_Click"/>
+        <Button x:Name="next_Button" Content="Continue" HorizontalAlignment="Left" Margin="817,648,0,0" VerticalAlignment="Top" Click="next_Button_Click" Width="104"/>
+        <Button x:Name="generatePublicKey" Content="Export Public Key" HorizontalAlignment="Left" Margin="356,648,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.258,-0.365" Width="146" Click="generatePublicKey_Click"/>
     </Grid>
 </Page>
