--- a/ChronosClient/Views/Messages.xaml
+++ b/ChronosClient/Views/Messages.xaml
@@ -14,5 +14,6 @@
         <Button x:Name="sendMessageAsync" Content="Send" HorizontalAlignment="Left" Margin="838,640,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.258,-0.365" Click="sendMessage_Click" Width="104"/>
         <Button x:Name="backToUsers" Content="Back" HorizontalAlignment="Left" Margin="729,640,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.258,-0.365" Click="backToUsers_Click" Width="104"/>
         <Button x:Name="generatePublicKey" Content="Export Public Key" HorizontalAlignment="Left" Margin="356,640,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.258,-0.365" Width="146" Click="generatePublicKey_Click"/>
+        <AppBarToggleButton x:Name="Logout" HorizontalAlignment="Left" Icon="Accept" Label="Logout" Margin="1212,0,0,0" VerticalAlignment="Top" Checked="Logout_Checked"/>
     </Grid>
 </Page>
